style.css
.container{
    width: 80%;
    margin: 0 auto;
    
}

.hero{
    margin-bottom: 50px;
}
.clear-float{
    clear: both;
}
.height-100{
    height: 50px;
}
.content-hero h1{
    font-size: 64px;
    font-weight: 900;
    width: 80%;
}
.content-hero{
    width: 50%;
    float: left;
    /* background-color: blue; */
}
.content-hero h1{
    font-weight: bold;
}
.content-hero p{
    font-size: 24px;
    color: #5B6773;
    
    padding: 0;
}
.img-hero{
    width: 50%;
    float: left;
    height: 500px; 
    text-align: center;

}
img{
    width: 60%;
    margin: 50px auto;
    border-radius: 5%;
    border: black solid 1px;
}
.btn-hero-black{
    padding: 20px 30px;
    margin: 0 5px 0 0;
    font-size: 20px;
   background-color: black;
   color: white;
   border-radius: 10px;
}
.btn-hero-white{
    background-color: white;
    color: rgb(38, 38, 38);
    font-size: 20px;
    border: 2px solid gray;
    padding: 20px 30px;
    border-radius: 10px;
    margin: 0 0 0 5px;
}

.about-us{
     margin-top: 50px;
}
.about-header{
    text-align: center;
}
.about-header h2{
    font-size: 40px;
    font-weight: 900;
}
.about-header p{
    font-size: 22px;
    color: #5B6773;
    width: 60%;
    margin: auto;
}
/* .section-card{
    background-color: red;
} */
.section-card h3{
    font-size: 22px;
}
.card-about-us{
    background-color: #DBEAFE;
    width: 25%;
    padding: 25px;
    text-align: center;
    border-radius: 10px;
    float: left;
    margin: 20px 20px 20px 0;
}
 .green-card-about-us{
    background-color: #D0FAE5;
    width: 25%;
    padding: 25px;
    text-align: center;
    border-radius: 10px;
    float: left;
    margin: 20px;
}
 .blue-traingle{
    background-color: #155DFC;
    width: 30px;
    height: 30px;
    margin: auto;
    border:17px #155DFC solid ;
    border-radius: 30%;
}
.green-traingle{
 background-color: #009966;
    width: 30px;
    height: 30px;
    margin: auto;
    border:17px #009966 solid ;
    border-radius: 30%;
}
.purple-card-about-us{
   background-color: #F3E8FF;
    width: 25%;
    padding: 34px;
    text-align: center;
    border-radius: 10px;
    float: left;
    margin: 20px;
}
.Purple-traingle{
    background-color: #9810FA;
    width: 30px;
    height: 30px;
    margin: auto;
    border:17px #9810FA solid ;
    border-radius: 30%;
}
.white-traingle{
   background-color: white;
    width: 30px;
    height: 30px;
    border-radius: 30%; 
}
.white-circle{
   background-color: white;
    width: 30px;
    height: 30px;
    border-radius: 50%; 
}
.section-card p{
        color: #5B6773;
}
/*
.white-traingle{
    
    background-color: white;
    height: 25px;
}

.center{
    width: 100%;
} */

.traingle-test{
    padding: 1px;
    background-color: white;
    width: 50px;
    height: 50px;
    margin: auto;
    border:3px #155DFC solid ;
    border-radius: 30%;
}
.traingle-test1{
   
    background-color: #155DFC;
    width: 50px;
    height: 50px;
    border:20px #155DFC solid ;
    margin: auto;
    border-radius: 20%;
}
.traingle-test2{
    
    background-color: rgb(122, 15, 15);
    width: 50px;
    height: 50px;
    border:1px #155DFC solid ;
    border-radius: 30%;
}

/* Why Choose Us Section */
.img-more-just-gym{
    float: left;
    width: 50%;
    /* background-color: blue; */
}
.img-more-just-gym img{
   width: 95%;
}
.content-more-just-gym{
    margin: 25px 0 0 20px;
    float: left;
    width: 45%;
    /* background-color: red; */
}
.content-more-just-gym h3{
    font-size: 30px;
    font-weight: 900;
}
.content-container{
    padding-left: 20px;
    border-left: 4px solid black;
     margin: 20px 0;
}
.content-container h4{
    font-size: 20px;
    font-weight: 900;
    margin: 0;
    padding: 0;
}
.content-container p{
    font-size: 18px;
    color: #5B6773;
    margin: 15px 0;
    /* padding: 0; */
}


/* What Our Members Say  */
.our-members{
    margin: 50px 0;
    background-color: #F9FAFB;
}
.our-members h2{
    text-align: center;
    font-size: 40px;
    font-weight: 900;
    padding-top: 50px;
    margin-bottom: 15px;
}
.paragr-Join-our-members{
   margin: 10px 0 50px 0;
    font-size: 22px;
    color: #5B6773;
    text-align: center;

}
.card-our-members-1{
   width: 30%;
   margin: 0 20px 0 0;
    float: left;
    background-color: #EFF6FF;
    border: #D6E8FF 2px solid;
    border-radius: 10px;
   
}
.card-our-members-2{
   width: 30%;
   margin: 0 30px 0 0;
    float: left;
    background-color: #ECFDF5;
     border: 2px solid #C3F8DF;
     border-radius: 10px;
}
.card-our-members-3{
    width: 30%;
    margin: 0 0 0 20px;
    float: left;
    background-color: #FAF5FF;
    border: #F2E5FF 2px solid;
    border-radius: 10px;
}
.header-card-our-member{
    /* background-color: red; */
    width: 80%;
    margin: auto;
    padding: 30px 20px 0 20px;
}
.head-and-desc h4{
    font-size: 20px;
    font-weight: 900;
    margin: 10px;
    
    /* background-color: tomato; */
}
.head-and-desc p{
    font-size: 18px;
    color: #5B6773;
    margin:10px;
}
.paragraph-card-our-member{
    width: 80%;
    font-size: 18px;
    color: #5B6773;
    margin: 20px auto;
    margin-bottom: 35px;
    line-height: 1.5;
}
/* .header-card-our-member p{
   background-color: red;
} */
.our-members img{
    border-radius: 50%;
    width: 80px;
    margin: 0;
     border: black solid 0px;
}
.head-and-desc{
    width: 70%;
    float: left;
    /* background-color: chocolate; */
}
.imag-container{
    width: 30%;
    float: left;
    
    /* background-color: blue; */
}

/* Counter Section */
.counter-section{
    margin: 50px 0;
    padding: 30px;
    background-color: #F1F5F9;
    border-radius: 20px;
    border: #E9EFF5 2px solid;
}
.Active , .Expert , .Group , .Access{
    width: 25%;
    float: left;
    text-align: center;
}
.counter-section h4{
    font-size: 30px;
    font-weight: 900;
    margin-bottom: 0;
}
.counter-section p{
    font-size: 18px;
    color: #5B6773;
}

